--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "browser-sync": "^3.0.4",
     "gulp": "^5.0.1",
-    "gulp-file-include": "^2.3.0"
+    "gulp-file-include": "^2.3.0",
+    "gulp-sass": "^6.0.1",
+    "sass": "^1.90.0"
   }
 }
